# minecraft-clone-opengl

./: .gitignore  ;q  CMakeLists.txt  \  imgui.ini  noise.pgm
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
src/AyalaCoreEngine/Core/: Application.cpp  Camera.cpp  Camera.h  Input.h  Settings.h  Window.h
src/AyalaCoreEngine/Renderer/: BufferLayout.h  IndexBuffer.cpp  Mesh.cpp  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexBuffer.cpp
src/AyalaCoreEngine/Scene/: Scene.h
src/Game/Entities/: Entity.cpp  Entity.h  Player.h  PlayerController.cpp  PlayerController.h
src/Game/Math/: PerlinNoise.cpp  PerlinNoise.h  Random.cpp  Random.h
src/Game/Scene/: WorldScene.cpp  WorldScene.h
src/Game/Voxel/: Block.h  Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  World.cpp  World.h  WorldGen.cpp  WorldGen.h
src/core/: Application.cpp  Application.h  Assert.cpp  Assert.h  Camera.cpp  Camera.h  Input.cpp  Input.h  Settings.h  Window.cpp  Window.h
src/renderer/: BufferLayout.cpp  BufferLayout.h  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/voxel/: Block.h  Chunk.h  ChunkMesh.cpp  ChunkMesh.h
